# Android-imgui-demo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/NeKo/WuLi/: ImGuiRoot.aidl
app/src/main/java/com/NeKo/WuLi/: AppConfig.java  Main.java  Renewal.java  Tools.java
app/src/main/java/com/NeKo/WuLi/HotUpdate/: ClassLoaderHookHelper.java  NuomHttpUtil.java  ReflectionUtil.java
app/src/main/java/com/NeKo/WuLi/ImGui/: ImGuiJNI.java  ImGuiSurfaceView.java  ImGuiTextureView.java  ImGuiViewService.java  KeyboardViewClass.java  KeyboardViewService.java  RecorderFakeUtils.java
app/src/main/java/com/NeKo/WuLi/ImGui/Root/: ImGuiAidl.java  ImGuiAidlService.java  ImGuiJNIRoot.java
app/src/main/java/com/NeKo/WuLi/ui/: Main_Home.java  Main_Info.java  Main_Settings.java
app/src/main/jni/: CMakeLists.txt  JNI.cpp  main.cpp  全局.h  功能.h  布局.h  绘制.h
app/src/main/jni/Tool/: AlguiLog.h  AlguiMemTool.h  内存读写.h  颜色.h
app/src/main/res/layout/: activity_main.xml  u_home.xml  u_info.xml  u_setings.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
